--- a/html/02_program_structure.html
+++ b/html/02_program_structure.html
@@ -479,7 +479,7 @@ console.log(abc.length);
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-ROnwerR8AG" href="#c-ROnwerR8AG" tabindex="-1" role="presentation"></a><span class="tok-comment">// Tu código aquí.</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-DpgPWjXISq" href="#p-DpgPWjXISq" tabindex="-1" role="presentation"></a>Puedes comenzar con un programa que imprime los números del 1 al 7, el cual puedes obtener haciendo algunas modificaciones al ejemplo de impresión de números pares dado anteriormente en el capítulo, donde se introdujo el bucle <code>for</code>.</p>
 
@@ -497,7 +497,7 @@ console.log(abc.length);
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-ROnwerR8AG_1" href="#c-ROnwerR8AG_1" tabindex="-1" role="presentation"></a><span class="tok-comment">// Tu código aquí.</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-FnPgHxuR9J" href="#p-FnPgHxuR9J" tabindex="-1" role="presentation"></a>Claramente, recorrer los números es un trabajo de bucle, y seleccionar qué imprimir es una cuestión de ejecución condicional. Recuerda el truco de usar el operador de resto (<code>%</code>) para verificar si un número es divisible por otro número (tiene un resto de cero).</p>
 
@@ -526,7 +526,7 @@ console.log(abc.length);
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-ROnwerR8AG_2" href="#c-ROnwerR8AG_2" tabindex="-1" role="presentation"></a><span class="tok-comment">// Tu código aquí.</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-Gr7cParUG1" href="#p-Gr7cParUG1" tabindex="-1" role="presentation"></a>Para trabajar con dos dimensiones, necesitarás un bucle dentro de otro bucle. Pon llaves alrededor de los cuerpos de ambos bucles para que sea fácil ver dónde empiezan y terminan. Intenta indentar correctamente estos cuerpos. El orden de los bucles debe seguir el orden en el que construimos la cadena (línea por línea, de izquierda a derecha, de arriba abajo). Entonces el bucle exterior maneja las líneas y el bucle interior maneja los caracteres en una línea.</p>
 
