--- a/html/03_functions.html
+++ b/html/03_functions.html
@@ -546,7 +546,7 @@ console.log(min(<span class="tok-number">0</span>, <span class="tok-number">10</
 console.log(min(<span class="tok-number">0</span>, -<span class="tok-number">10</span>));
 <span class="tok-comment">// → -10</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-/a3wyCwq6P" href="#p-/a3wyCwq6P" tabindex="-1" role="presentation"></a>Si tienes problemas para colocar llaves y paréntesis en el lugar correcto para obtener una definición de función válida, comienza copiando uno de los ejemplos de este capítulo y modifícalo.</p>
 
@@ -585,7 +585,7 @@ console.log(isEven(<span class="tok-number">75</span>));
 console.log(isEven(-<span class="tok-number">1</span>));
 <span class="tok-comment">// → ??</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-9dAuiITSNm" href="#p-9dAuiITSNm" tabindex="-1" role="presentation"></a>Es probable que tu función se parezca en cierta medida a la función interna <code>find</code> en el ejemplo recursivo <code>findSolution</code> <a href="03_functions.html#recursive_puzzle">ejemplo</a> de este capítulo, con una cadena <code>if</code>/<code>else if</code>/<code>else</code> que prueba cuál de los tres casos aplica. El <code>else</code> final, correspondiente al tercer caso, realiza la llamada recursiva. Cada una de las ramas debe contener una declaración <code>return</code> o de alguna otra manera asegurarse de que se devuelva un valor específico.</p>
 
@@ -608,7 +608,7 @@ console.log(countBs(<span class="tok-string">&quot;BOB&quot;</span>));
 console.log(countChar(<span class="tok-string">&quot;kakkerlak&quot;</span>, <span class="tok-string">&quot;k&quot;</span>));
 <span class="tok-comment">// → 4</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-N+elrvhLar" href="#p-N+elrvhLar" tabindex="-1" role="presentation"></a>Tu función necesida un bucle que mire cada carácter en la cadena. Puede ejecutar un índice desde cero hasta uno menos que su longitud (<code>&lt; string.<wbr>length</code>). Si el carácter en la posición actual es el mismo que el que la función está buscando, agrega 1 a una variable de contador. Una vez que el bucle ha terminado, el contador puede ser devuelto.</p>
 
