--- a/html/07_robot.html
+++ b/html/07_robot.html
@@ -316,7 +316,7 @@ runRobotAnimation(VillageState.random(), randomRobot);</pre>
 
 compareRobots(routeRobot, [], goalOrientedRobot, []);</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-kcCXvCKFts" href="#p-kcCXvCKFts" tabindex="-1" role="presentation"></a>Tendrás que escribir una variante de la función <code>runRobot</code> que, en lugar de registrar los eventos en la consola, devuelva el número de pasos que el robot tomó para completar la tarea.</p>
 
@@ -334,7 +334,7 @@ compareRobots(routeRobot, [], goalOrientedRobot, []);</pre>
 
 runRobotAnimation(VillageState.random(), tuRobot, memoria);</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-sRXTWyzdOx" href="#p-sRXTWyzdOx" tabindex="-1" role="presentation"></a>La principal limitación de <code>goalOrientedRobot</code> es que solo considera un paquete a la vez. A menudo caminará de un lado a otro del pueblo porque el paquete en el que está centrando su atención sucede que está en el otro lado del mapa, incluso si hay otros mucho más cerca.</p>
 
@@ -371,7 +371,7 @@ console.log(a.has(<span class="tok-string">&quot;b&quot;</span>));
 console.log(b.has(<span class="tok-string">&quot;a&quot;</span>));
 <span class="tok-comment">// → false</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-TYZxWM8K+Y" href="#p-TYZxWM8K+Y" tabindex="-1" role="presentation"></a>{{index “mapa persistente (ejercicio)”, “clase Set”, [array, creación], “clase PGroup”}}</p>
 
