--- a/html/18_http.html
+++ b/html/18_http.html
@@ -623,7 +623,7 @@ localStorage.removeItem(<span class="tok-string">&quot;nombre de usuario&quot;</
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-ROnwerR8AG" href="#c-ROnwerR8AG" tabindex="-1" role="presentation"></a><span class="tok-comment">// Tu código aquí.</span></pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-yZerPhVUEO" href="#p-yZerPhVUEO" tabindex="-1" role="presentation"></a>Basate en los ejemplos de <code>fetch</code> <a href="18_http.html#fetch">anteriores en el capítulo</a>.</p>
 
@@ -645,7 +645,7 @@ localStorage.removeItem(<span class="tok-string">&quot;nombre de usuario&quot;</
   <span class="tok-comment">// Tu código aquí.</span>
 &lt;/<span class="tok-typeName">script</span>&gt;</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-AnMiVGe/eL" href="#p-AnMiVGe/eL" tabindex="-1" role="presentation"></a>Utiliza <code>document.<wbr>querySelector</code> o <code>document.<wbr>getElementById</code> para acceder a los elementos definidos en tu HTML. Un manejador de eventos para eventos <code>&quot;click&quot;</code> o <code>&quot;mousedown&quot;</code> en el botón puede obtener la propiedad <code>value</code> del campo de texto y llamar a <code>Function</code> en él.</p>
 
@@ -686,7 +686,7 @@ localStorage.removeItem(<span class="tok-string">&quot;nombre de usuario&quot;</
   <span class="tok-comment">// Tu código aquí.</span>
 &lt;/<span class="tok-typeName">script</span>&gt;</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-j+hMBMOeev" href="#p-j+hMBMOeev" tabindex="-1" role="presentation"></a>Para resolver el problema de que los cambios ocurran conceptualmente al mismo tiempo, intenta ver la computación de una generación como una función pura, la cual toma un grid y produce un nuevo grid que representa el siguiente turno.</p>
 
