--- a/html/16_game.html
+++ b/html/16_game.html
@@ -749,7 +749,7 @@ Player.prototype.update = <span class="tok-keyword">function</span>(<span class=
 &lt;/<span class="tok-typeName">script</span>&gt;
 &lt;/<span class="tok-typeName">body</span>&gt;</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-5t+0TIeRhw" href="#p-5t+0TIeRhw" tabindex="-1" role="presentation"></a>Una animación puede ser interrumpida devolviendo <code>false</code> desde la función dada a <code>runAnimation</code>. Puede ser continuada llamando a <code>runAnimation</code> nuevamente.</p>
 
@@ -810,7 +810,7 @@ Player.prototype.update = <span class="tok-keyword">function</span>(<span class=
   &lt;/<span class="tok-typeName">script</span>&gt;
 &lt;/<span class="tok-typeName">body</span>&gt;</pre>
 
-<details class="solution"><summary>Display hints...</summary><div class="solution-text">
+<details class="solution"><summary>Mostrar pistas...</summary><div class="solution-text">
 
 <p><a class="p_ident" id="p-kWbcEZ9c9n" href="#p-kWbcEZ9c9n" tabindex="-1" role="presentation"></a>Si deseas implementar un tipo de movimiento que sea mutable, como el rebote, asegúrate de almacenar el estado necesario en el objeto del actor, inclúyelo como argumento del constructor y agrégalo como propiedad.</p>
 
